[package]
name = "pa-tom"
version = "0.1.0"
authors = ["Clay Sheaff <claysheaff@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.13.1", features = ["blas"] }
ndarray-linalg = "0.12"
ndarray-stats = "0.3"
num-integer = "0.1"
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
fftw = "0.6.2"
image = "0.23.12"

[profile.release]
debug = true